--- a/Backend/config.json
+++ b/Backend/config.json
@@ -5,6 +5,6 @@
         "host": "localhost",
         "name": "tecneu"
     },
-    "listenAddress": "localhost",
+    "listenAddress": "0.0.0.0",
     "listenPort": "3000"
 }
