--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,11 +12,15 @@
     "@types/node": "^11.12.2"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.1",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/mysql": "^2.15.5",
-    "body-parser": "^1.18.3",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.16.0"
   }
 }
