User finished, providers almost finished (only left modify)

--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -3,6 +3,7 @@
         "module": "commonjs",
         "sourceMap": true,
         "watch": true,
+        "inlineSources": true,
         "resolveJsonModule": true,
         "target": "es2015"
     }
