--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,12 +15,16 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.1",
+    "@types/express-jwt": "0.0.42",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mysql": "^2.15.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
+    "install": "^0.12.2",
     "jsonwebtoken": "^8.5.1",
+    "mercadolibre": "0.0.13",
     "mysql": "^2.16.0"
   }
 }
