--- a/App/app/build.gradle
+++ b/App/app/build.gradle
@@ -32,7 +32,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.github.nkzawa:socket.io-client:0.6.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.mercadolibre.android.sdk:mercadolibre_android_sdk:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
