--- a/Backend/config.json
+++ b/Backend/config.json
@@ -1,8 +1,8 @@
 {
     "database": {
-        "user": "root",
-        "password": "",
-        "host": "localhost",
+        "user": "remote",
+        "password": "1234",
+        "host": "192.168.43.26",
         "name": "tecneu"
     },
     "listenAddress": "0.0.0.0",
