--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.16.1",
     "@types/express-jwt": "0.0.42",
     "@types/jsonwebtoken": "^8.3.2",
+    "@types/lodash": "^4.14.136",
     "@types/mysql": "^2.15.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -24,6 +25,7 @@
     "express-jwt": "^5.3.1",
     "install": "^0.12.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.14",
     "mercadolibre": "0.0.13",
     "mysql": "^2.16.0",
     "socket.io": "^2.2.0"
